使用工厂设计模式实现多种分布式锁的实现